Fri Dec 23 00:43:15 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/*.gel: reset variable names for surfaces.  For shocks also
	  add commented out code to plot the result as a surface

	* po/eo.po: update 

Wed Dec 21 22:45:28 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: do not set parent on the
	  dialogs in gel_ask_(buttons|string) functions.  Window managers
	  always screw it up, especially if the program uses the graphing
	  window as well.

Tue Dec 20 17:31:08 2016  Jiri (George) Lebl <jirka@5z.com>

	* NEWS: update

	* lib/number_theory/primes.gel: update GIMPS limit

Tue Dec 20 15:11:04 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/explicit-heat-fdm.gel, examples/explicit-heat-fdm-line.gel:
	  Improve the FDM example: make it easy to do other boundary
	  conditions, and add some more sample initial functions.  Also
	  add a version that plots the 2d line plot as an animation

	* src/matrixw.c: Fix setting matrices that have been transposed.

	* src/geniustests.pl: Add a bunch of tests

Mon Dec 19 20:07:44 2016  Jiri (George) Lebl <jirka@5z.com>

	* po/eo.po: Add some translations.

	* configure.ac: move file to new name.  Require vte 0.26

	* src/gnome-genius.c: remove deprecated vte functions

Fri Dec 16 17:36:16 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/complex-analysis-argument-principle.gel: Add argument
	  principle example

	* examples/complex-analysis-mandelbrot-set.gel: slightly modify, try
	  more iterations

Tue Nov 22 14:51:35 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c: fix doc string for ErrorFunction,  Thanks to
	  Ask Hjorth Larsen

Tue Nov 22 14:47:08 2016  Jiri (George) Lebl <jirka@5z.com>

	* src/complex-analysis-wandering-ball.gel: add "angle" mode to show
	  what happens to angles.

Thu Sep 22 17:41:55 2016  Jiri (George) Lebl <jirka@5z.com>

	* examples/riemann-integral-darboux.gel: Add an example for Darboux
	  sums

Thu Sep 22 17:05:13 2016  Jiri (George) Lebl <jirka@5z.com>
