@@ -1,4 +1,4 @@
-AC_INIT([genius], [1.0.21])
+AC_INIT([genius], [1.0.22])
 AC_CONFIG_SRCDIR([src/calc.c])
 AM_INIT_AUTOMAKE([dist-xz])
 
