@@ -23,7 +23,10 @@ Changes to 1.0.22
   DoubleFactorial apply over matrix.
 * Fix some inverse trig functions with complex arguments.
 * Other minor fixes including some crashes
-* Translation updates (FIXME)
+* Translation updates (Miguel Rodríguez Núñez, Marek Černocký, Anders Jonsson,
+  Ask Hjorth Larsen, Alan Mortensen, Balázs Úr, Mario Blättermann,
+  Christian Kirbach, Мирослав Николић, Daniel Șerbănescu, Rafael Fontenelle,
+  Piotr Drąg, Tiago Santos, Enrico Nicoletto, Daniel Mustieles, moi)
 
 * During making of these changes the author (Jiri) was partially supported by
   NSF grant DMS 1362337 and the Oklahoma State University
